# TSPPH_PerformanceAnalysis

./: .gitignore  .gitmodules  Makefile  README.md
adapters/: Makefile  convert_ATT_NODE_COORD_SECTION.py  convert_CEIL2D_NODE_COOR_SECTION.py  convert_EUC2D_NODE_COOR_SECTION.py  convert_EXPLICIT_FULL_MATRIX.py  convert_EXPLICIT_LOWER_DIAG_ROW.py  convert_EXPLICIT_UPPER_DIAG_ROW.py  convert_EXPLICIT_UPPER_ROW.py  convert_GEO_COORD_DISPLAY_NODE_COOR_SECTION.py
analyzers/: Makefile  cost_scatter.py  recursion_steps.py  time_regression.py  time_regression_confront_policies.py  time_regression_confront_thresholds.py  times_detailed_regression.py
extra/: Makefile  awk_resources.awk  solutions.csv
extra/time_measurement/: 045842975_10_16.txt  34542469_10_17.txt  358439406_10_15.txt  58396821_10_12.txt
performance_scripts/: Makefile
resources/: Makefile
results/: a280_adjacencies_detailed_avg_min_thr_10.txt  a280_adjacencies_detailed_avg_min_thr_3.txt  a280_adjacencies_detailed_avg_sav_thr_10.txt  a280_adjacencies_detailed_avg_sav_thr_3.txt  a280_adjacencies_detailed_max_min_thr_10.txt  a280_adjacencies_detailed_max_min_thr_18.txt  a280_adjacencies_detailed_max_min_thr_3.txt  a280_adjacencies_detailed_max_sav_thr_10.txt  a280_adjacencies_detailed_max_sav_thr_18.txt  a280_adjacencies_detailed_max_sav_thr_3.txt  a280_adjacencies_detailed_min_min_thr_10.txt  a280_adjacencies_detailed_min_min_thr_18.txt  a280_adjacencies_detailed_min_min_thr_3.txt  a280_adjacencies_detailed_min_sav_thr_10.txt  a280_adjacencies_detailed_min_sav_thr_18.txt  a280_adjacencies_detailed_min_sav_thr_3.txt  a280_costs_detailed_avg_min_thr_10.txt  a280_costs_detailed_avg_min_thr_3.txt  a280_costs_detailed_max_min_thr_18.txt  a280_costs_detailed_max_sav_thr_10.txt  a280_costs_detailed_max_sav_thr_3.txt  a280_costs_detailed_min_sav_thr_10.txt  a280_costs_detailed_min_sav_thr_18.txt  a280_costs_detailed_min_sav_thr_3.txt  a280_partitions_detailed_avg_min_thr_10.txt  a280_partitions_detailed_avg_sav_thr_3.txt  a280_partitions_detailed_max_min_thr_10.txt  a280_partitions_detailed_max_sav_thr_18.txt  a280_partitions_detailed_max_sav_thr_3.txt  a280_partitions_detailed_min_min_thr_10.txt  a280_partitions_detailed_min_min_thr_3.txt  a280_partitions_detailed_min_sav_thr_18.txt  a280_time_avg_min_thr_10.txt  a280_time_avg_min_thr_18.txt  a280_time_avg_min_thr_3.txt  a280_time_avg_sav_thr_10.txt  a280_time_avg_sav_thr_18.txt  a280_time_avg_sav_thr_3.txt  a280_time_max_min_thr_10.txt  a280_time_max_min_thr_18.txt  (+6669 more)
src/: CMakeLists.txt
src/non_relaxed_instance_time_measurer/: instanceCreator.c  non_relaxed_time_measurer.c
src/running_scripts/: execution_detailed_script.c  execution_time_script.c
src/solvers/: highsSolver.c  highsSolver.h
